--- a/app/src/main/res/layout/dialog_detail_transaction.xml
+++ b/app/src/main/res/layout/dialog_detail_transaction.xml
@@ -1,39 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:background="@color/colorLayoutBackground">
+    android:background="@color/colorLayoutBackground"
+    android:padding="10dp">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_customer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            app:cardCornerRadius="0dp"
+            app:cardCornerRadius="10dp"
             app:cardElevation="0dp">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:padding="15dp">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_title_date"
+                    style="@style/StandartTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toStartOf="@id/tv_transaction_date"
+                    android:text="Transaction Date"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_title_invoice"
+                    style="@style/StandartTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_title_date"
+                    android:layout_toStartOf="@id/tv_invoice_number"
+                    android:text="Invoice Number"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_title_customer"
+                    style="@style/StandartTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_title_invoice"
+                    android:layout_toStartOf="@id/tv_customer_name"
+                    android:text="Customer Name"
+                    android:textStyle="bold" />
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_customer_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     style="@style/StandartTextView"
-                    android:textStyle="bold"
-                    tools:text="@tools:sample/full_names"/>
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tv_customer_telephone"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_customer_name"
-                    tools:text="@tools:sample/us_phones"/>
+                    android:layout_below="@id/tv_invoice_number"
+                    android:layout_alignParentEnd="true"
+                    tools:text="@tools:sample/full_names" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_invoice_number"
+                    style="@style/StandartTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_transaction_date"
+                    android:layout_alignParentEnd="true"
+                    tools:text="200601" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_transaction_date"
+                    style="@style/StandartTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    tools:text="@tools:sample/date/mmddyy" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
@@ -43,8 +87,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/cv_customer"
             android:layout_marginBottom="10dp"
-            app:cardCornerRadius="0dp"
+            app:cardCornerRadius="10dp"
             app:cardElevation="0dp">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_product_list"
                 android:layout_width="match_parent"
@@ -59,10 +104,12 @@
             android:layout_below="@id/cv_product_list"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="15dp">
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_noi"
                     style="@style/StandartTextView"
@@ -71,6 +118,7 @@
                     android:layout_toStartOf="@id/tv_num_noi"
                     android:text="Number of items"
                     android:textStyle="bold" />
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_num_noi"
                     style="@style/StandartTextView"
@@ -78,6 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:text="1" />
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_total"
                     style="@style/StandartTextView"
@@ -87,6 +136,7 @@
                     android:layout_toStartOf="@id/tv_num_total"
                     android:text="Total"
                     android:textStyle="bold" />
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_num_total"
                     style="@style/StandartTextView"
@@ -95,6 +145,7 @@
                     android:layout_below="@id/tv_num_noi"
                     android:layout_alignParentEnd="true"
                     android:text="Rp20.000" />
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_payment"
                     style="@style/StandartTextView"
@@ -104,6 +155,7 @@
                     android:layout_toStartOf="@id/tv_num_payment"
                     android:text="Cash payment"
                     android:textStyle="bold" />
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_num_payment"
                     style="@style/StandartTextView"
@@ -122,6 +174,7 @@
                     android:layout_toStartOf="@id/tv_num_payment"
                     android:text="Change"
                     android:textStyle="bold" />
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_num_change"
                     style="@style/StandartTextView"
