--- a/app/src/main/res/layout/item_choose_customer.xml
+++ b/app/src/main/res/layout/item_choose_customer.xml
@@ -17,23 +17,14 @@
             android:id="@+id/rb_customer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerInParent="true"/>
+            android:layout_alignParentStart="true"/>
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_customer_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/rb_customer"
+            android:layout_centerInParent="true"
             style="@style/StandartTextView"
-            android:textStyle="bold"
             tools:text="@tools:sample/full_names"/>
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_customer_telephone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/rb_customer"
-            android:layout_below="@id/tv_customer_name"
-            style="@style/StandartTextView"
-            tools:text="@tools:sample/us_phones"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
