--- a/app/src/main/res/layout/fragment_choose_product.xml
+++ b/app/src/main/res/layout/fragment_choose_product.xml
@@ -32,12 +32,13 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="15dp">
+                android:padding="10dp">
                 <TextView
                     android:id="@+id/tv_total_items"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
+                    android:layout_centerInParent="true"
                     style="@style/CartTextView"
                     tools:text="95 Items"/>
                 <TextView
