--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="colorAccent">#2AD4FF</color>
     <color name="colorLayoutBackground">#F5F5F5</color>
     <color name="colorDivider">#F4F4F4</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
