--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="actionBarStyle">@style/ActionBarStyle</item>
+        <item name="android:fontFamily">@font/roboto</item>
     </style>
     
     <style name="ActionBarStyle" parent="@style/Widget.AppCompat.Light.ActionBar">
@@ -70,7 +71,7 @@
     <style name="QuantityTextView">
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textSize">15sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="TitleCartTextView">
