--- a/app/src/main/res/layout/fragment_choose_product.xml
+++ b/app/src/main/res/layout/fragment_choose_product.xml
@@ -12,10 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_category_filter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:layout_alignParentStart="true"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_category_button"/>
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_product"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
+            android:layout_below="@id/rv_category_filter"
             android:layout_above="@id/cv_cart"
             tools:listitem="@layout/item_choose_product"/>
         <androidx.cardview.widget.CardView
