--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,10 +5,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="actionBarStyle">@style/ActionBarStyle</item>
         <item name="android:fontFamily">@font/roboto</item>
+        <item name="actionBarStyle">@style/ActionBarStyle</item>
     </style>
-    
+
+
     <style name="ActionBarStyle" parent="@style/Widget.AppCompat.Light.ActionBar">
         <item name="android:background">@android:color/black</item>
     </style>
@@ -98,5 +99,15 @@
     
     <style name="SplashScreenStyle" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
+
+    <style name="ButtonFilterHistory">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minWidth">75dp</item>
+        <item name="android:minHeight">45dp</item>
+        <item name="android:backgroundTint">@color/colorPrimary</item>
+        <item name="textColor">@color/colorWhite</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
