--- a/app/src/main/res/layout/dialog_show_customer.xml
+++ b/app/src/main/res/layout/dialog_show_customer.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,11 +8,11 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_title_name"
+        style="@style/StandartTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/StandartTextView"
-        android:textStyle="bold"
-        android:text="Name" />
+        android:text="Name"
+        android:textStyle="bold" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_customer_name"
@@ -27,12 +26,13 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_title_telephone"
+        style="@style/StandartTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_customer_name"
-        style="@style/StandartTextView"
-        android:textStyle="bold"
-        android:text="Telephone" />
+        android:layout_toStartOf="@id/btn_send_whatsapp"
+        android:text="Telephone"
+        android:textStyle="bold" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_customer_telephone"
@@ -40,18 +40,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_title_telephone"
+        android:layout_toStartOf="@id/btn_send_whatsapp"
         android:layout_marginBottom="10dp"
         android:textSize="18sp"
         tools:text="@tools:sample/us_phones" />
 
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/btn_send_whatsapp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_customer_name"
+        android:layout_above="@id/tv_title_address"
+        android:layout_alignParentEnd="true"
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_whatsapp"
+        android:tint="@color/colorPrimary"
+        android:background="?android:selectableItemBackground"/>
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_title_address"
+        style="@style/StandartTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_customer_telephone"
-        style="@style/StandartTextView"
-        android:textStyle="bold"
-        android:text="Address" />
+        android:text="Address"
+        android:textStyle="bold" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_customer_address"
